<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
    <RelativeLayout
        android:id="@+id/rl_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <RelativeLayout
            android:id="@+id/payment_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_1"
            android:layout_width="match_parent"
            android:layout_below="@id/payment_information"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_clear_black_24dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp" />

            <TextView
                android:id="@+id/txt_header1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="10dp"
                android:text="INTERNET AND MOBILE BANKING"
                android:textSize="18sp"
                android:padding="10dp"
                android:textColor="#187bcd"
                android:background="@drawable/border_set"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="40dp" />

            <TextView
                android:id="@+id/txt_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_header1"
                android:text="@string/Txt_Header1"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:textAlignment="gravity"
                android:layout_marginEnd="20dp"
                android:justificationMode="inter_word"
                />

            <TextView
                android:id="@+id/txt_pr1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_details"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/Txt_Pr1"
                android:justificationMode="none"
                />

            <TextView
                android:id="@+id/txt_pr2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_pr1"
                android:layout_marginStart="20dp"
                android:text="@string/Txt_Pr2"
                android:layout_marginEnd="20dp"

                />

            <TextView
                android:id="@+id/txt_pr3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_pr2"
                android:layout_marginStart="20dp"
                android:text="@string/Txt_Pr3"
                android:layout_marginEnd="20dp"
                />

            <TextView
                android:id="@+id/txt_pr4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_pr3"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/Txt_Pr4"
                />

            <TextView
                android:id="@+id/txt_pr5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_pr4"
                android:layout_marginStart="20dp"
                android:text="@string/Txt_Pr1"
                android:layout_marginEnd="20dp"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_1"
            android:layout_marginTop="10dp"

            >

            <TextView
                android:id="@+id/txt_header2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="OVER THE COUNTER"
                android:textSize="18sp"
                android:padding="10dp"
                android:textColor="#187bcd"
                android:background="@drawable/border_set"
                />

            <TextView
                android:id="@+id/txt_counter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_header2"
                android:text="@string/Txt_Header2"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:textAlignment="gravity"
                android:layout_marginEnd="20dp"
                android:justificationMode="inter_word"
                />
            <TextView
                android:id="@+id/txt_counter1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_counter"
                android:text="@string/Txt_Pr6"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                />

            <TextView
                android:id="@+id/txt_counter2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_counter1"
                android:text="@string/Txt_Pr7"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                />


            <TextView
                android:id="@+id/txt_counter3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_counter2"
                android:text="@string/Txt_Pr8"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                />

            <TextView
                android:id="@+id/txt_counter4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_counter3"
                android:text="@string/Txt_Pr9"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                />

            <TextView
                android:id="@+id/txt_counter5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_counter4"
                android:text="@string/Txt_Pr10"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_2"
            android:layout_marginTop="10dp"

            >
            <TextView
                android:id="@+id/txt_header3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="ATM"
                android:textSize="18sp"
                android:padding="10dp"
                android:textColor="#187bcd"
                android:background="@drawable/border_set"
                />

            <TextView
                android:id="@+id/txt_atm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_header3"
                android:text="@string/Txt_Header3"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:textAlignment="gravity"
                android:layout_marginEnd="20dp"
                />
            <TextView
                android:id="@+id/txt_atm1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_atm"
                android:text="@string/Txt_Pr11"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/txt_atm2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_atm1"
                android:text="@string/Txt_Pr12"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                />


            <TextView
                android:id="@+id/txt_atm3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_atm2"
                android:text="@string/Txt_Pr13"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                />

            <TextView
                android:id="@+id/txt_atm4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_atm3"
                android:text="@string/Txt_Pr14"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                />

        </RelativeLayout>


    </RelativeLayout>
  </ScrollView>

</LinearLayout>